# atr-tsnd-control

./: .gitignore  ADL2CSV.ipynb  ADL2CSV_no_label.ipynb  LICENSE  LOG2ADL.ipynb  README.md  check_device_status.py  check_memory.py  clear_mem.py  docker-compose.yml  download.py  init_sensor.py  listen_event.py  pyproject.toml  recording.py  requirements.txt  start_recording.py  stop_recording.py
ATR/: ADL2CSV.sh  ADL2CSV_ALL.sh  ATR_CommandSheet.md  LOG2ADL.sh  LOG2ADL_ALL.sh  LOG2ADL_ArmTrack.sh  LOG2CSV.sh  README.md
ATR/JupyterNotbook/: LOG2ADL.ipynb
ATR/src/: adl_to_csv.py  batch_log_to_adl.py  log_to_adl.py  log_to_csv.py
conf/: config.yaml
conf/client/: atr01-win.yaml  atr01.yaml  atr02.yaml  atr03.yaml  atr04.yaml
control/: README.md  check_device_status.py  check_memory.py  clear_mem.py  download.py  init_sensor.py  listen_event.py  main.py  pyproject.toml  recording.py  start_recording.py
control/conf/: config.yaml
control/conf/client/: atr01-win.yaml  atr01.yaml  atr02-win.yaml  atr02.yaml  atr03-win.yaml  atr03.yaml  atr04-win.yaml  atr04.yaml
control/conf/hydra/job_logging/: custom.yaml
control/notebooks/: Dev_CheckDownloadedRecords.ipynb
control/tests/: test_commands.py
control/tsndctl/: commands.py  device.py  logging.py  utils.py
docker/: Dockerfile  README.md  requirements.txt
preprocessing/: 01_DownSampling.ipynb  02_make_frames.py  03_add_label.py  04_split_by_data_category.py  DOWNSAMPLE.sh  PREPROCESS_GESTURE.sh  PREPROCESS_NONE.sh  SCRATCH.sh  const_params.py
preprocessing/src/: 01_DownSample.py  02_make_frames.py  03_add_label.py  04_split_by_data_category.py  05_Reshape.py  05_reshape.py  const_params.py
