[tool.poetry]
name = "atr-tk"
version = "0.1.0"
description = "Toolkit for ATR TSND151 sensor."
authors = ["Yoshimura Naoya <yoshimura708x@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
hydra-core = "^1.1.1"
numpy = "^1.21.2"
pyserial = "^3.5"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]
pysen = {version = "0.9.1", extras = ["lint"]}
pytest = "^6.2.5"
jupyter = "^1.0.0"
jupyterlab = "^3.2.0"
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
