[tool.poetry]
name = "atr-tsnd-control"
version = "0.1.0"
description = ""
authors = ["Naoya Yoshimura <yoshimura708x@gmail.com>"]
license = "MIT"
packages = [{include = "tsndctl"}]

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.3.1"
numpy = "^1.24.2"
pyserial = "^3.5"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"


[tool.poetry.scripts]
tsndctl-check = "tsndctl.bin.check_device_status:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
